tests/error_messages/struct_not_enum.stderr
error: Rotalubat can only be derived for enums
 --> tests/error_messages/struct_not_enum.rs:4:1
  |
4 | / struct Jones {
5 | |     x: i32,
6 | | }
  | |_^
